minifying images and submenu

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
             <ul class="links">
                 <li><a class="fade" href="index.html">Home</a></li>
                 <li><a class="underline" href="about.html">About</a></li>
-                <li><a class="fade" href="properties.html">Properties</a>
+                <li><a class="fade prop" href="properties.html">Properties</a>
                     <ul class="sub-menu">
                         <li><a href="biomat.html">Evans Square Biomat</a></li>
                         <li><a href="east-6th.html">East 6th Street</a></li>
