--- a/about.html
+++ b/about.html
@@ -18,11 +18,6 @@
     <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:700|Work+Sans:400,600" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <!-- Slick Carousel Test-->
-    <link rel="stylesheet" type="text/css" href="css/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="css/slick-theme.css"/>
-    <link rel="stylesheet" href="css/slick-lightbox.css">
-
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <script src="js/vendor/modernizr-2.8.3.min.js"></script>
@@ -235,8 +230,6 @@
 <script src="js/scrollreveal.min.js"></script>
 
 <script>
-
-
     (function scrollReveal() {
         window.sr = ScrollReveal();
 
@@ -245,6 +238,7 @@
             distance   : '20px',
             easing     : 'ease-out',
             origin     : 'bottom',
+            mobile     : false,
             reset      : true,
             scale      : 1,
             viewFactor : 0.1,
