--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,16 @@
     <link rel="stylesheet" href="css/main.css">
     <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 
+    <style>
+        #map {
+            height: 250px;
+            width: 100%;
+        }
+        #map img {
+            height: 250px;
+        }
+    </style>
+
 </head>
 <body id="contact">
 <script>document.body.className += ' fade-out';</script>
