fixed footer and contact map height

--- a/contact.html
+++ b/contact.html
@@ -192,6 +192,7 @@
         var mapOptions = {
             zoom: 13,
             disableDefaultUI: true,
+            height: 500,
             scrollwheel: false,
             scaleControl: false,
 
