still trying to fix footer

--- a/about.html
+++ b/about.html
@@ -238,7 +238,7 @@
             distance   : '20px',
             easing     : 'ease-out',
             origin     : 'bottom',
-            mobile     : false,
+            mobile     : true,
             reset      : true,
             scale      : 1,
             viewFactor : 0.1,
