--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 $('.slider').slick({
                     nextArrow: '<button class="nextArrow"><i class="fa fa-angle-right"></i></button>',
                     prevArrow: '<button class="prevArrow"><i class="fa fa-angle-left"></i></button>',
-                    autoplay: false,
+                    autoplay: true,
                     fade: true,
                     speed: 500
                 });
