--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,7 @@
                 </div>
             </div>
         </div>
-
+        <div class="clearfix"></div>
         <div class="rev" id="map"></div>
     </section>
     <div class="clearfix"></div>
@@ -184,7 +184,6 @@
         var mapOptions = {
             zoom: 13,
             disableDefaultUI: true,
-            height: 250,
             scrollwheel: false,
             scaleControl: false,
 
