got map to work and about page fixes

--- a/about.html
+++ b/about.html
@@ -88,12 +88,12 @@
     <section class="about-text">
         <section class="container">
             <div class="row">
-                <h2 class="col-md-8 offset-md-2">Madison Real Estate Inc. is a full-service, family-owned real estate firm expertly representing clients in brokerage, property management, and construction.
+                <h2 class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">Madison Real Estate Inc. is a full-service, family-owned real estate firm expertly representing clients in brokerage, property management, and construction.
                 </h2>
             </div>
                 <div class="row">
-                <p class="col-md-8 offset-md-2">With over 40 years of experience between its founders, Madison Real Estate Inc. has been able to perfect its strategies while providing its clients with the utmost in terms of transparency, partnership, and commitment. As we work with commercial, multi-family, and single-family real estate assets, we have harbored a broad perspective on various real estate ventures. This broad perspective lends itself to our clients, giving them a greater range of service and expertise. </p>
-                <p class="col-md-8 offset-md-2">Moreover, as a family-owned firm, we are hyper-focused on our client relations. We know how important it is to treat clients with respect, so we pride ourselves on fostering a culture of collaboration between ourselves and our clients. Our commitment to our clients is fundamental to us and surpasses the standard of other real estate businesses.
+                <p class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">With over 40 years of experience between its founders, Madison Real Estate Inc. has been able to perfect its strategies while providing its clients with the utmost in terms of transparency, partnership, and commitment. As we work with commercial, multi-family, and single-family real estate assets, we have harbored a broad perspective on various real estate ventures. This broad perspective lends itself to our clients, giving them a greater range of service and expertise. </p>
+                <p class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">Moreover, as a family-owned firm, we are hyper-focused on our client relations. We know how important it is to treat clients with respect, so we pride ourselves on fostering a culture of collaboration between ourselves and our clients. Our commitment to our clients is fundamental to us and surpasses the standard of other real estate businesses.
                 </p>
             </div>
         </section>
