--- a/contact.html
+++ b/contact.html
@@ -99,15 +99,15 @@
                     <h3>Direct Contact</h3>
                     <p>
                         info@madison.com <br />
-                        tel: 123.456.7891 <br />
-                        fax: 123.456.7891
+                        tel 123.456.7891 <br />
+                        fax 123.456.7891
                     </p>
                 </div>
                 <div class="information">
                     <h3>Information</h3>
                     <p>
-                        CAL BRE License: 01964088 <br>
-                        Contactor’s License: 1003327
+                        CAL BRE License 01964088 <br>
+                        Contactor’s License 1003327
                     </p>
                 </div>
             </div>
