trying to display numbers

--- a/contact.html
+++ b/contact.html
@@ -99,15 +99,15 @@
                     <h3>Direct Contact</h3>
                     <p>
                         info@madison.com <br />
-                        tel 123.456.7891 <br />
+                        tel <a href="tel:1-123-456-7891">123.456.7891 </a><br />
                         fax 123.456.7891
                     </p>
                 </div>
                 <div class="information">
                     <h3>Information</h3>
                     <p>
-                        CAL BRE License 01964088 <br>
-                        Contactor’s License 1003327
+                        CAL BRE License <span>01964088</span> <br>
+                        Contactor’s License <span>1003327</span>
                     </p>
                 </div>
             </div>
