--- a/contact.html
+++ b/contact.html
@@ -99,8 +99,8 @@
                     <h3>Direct Contact</h3>
                     <p>
                         info@madison.com <br />
-                        tel <a href="tel:1-123-456-7891">123.456.7891 </a><br />
-                        fax 123.456.7891
+                        tel <span>123.456.7891 </span><br />
+                        fax <span>123.456.7891</span>
                     </p>
                 </div>
                 <div class="information">
