contact footer fix

--- a/contact.html
+++ b/contact.html
@@ -113,9 +113,9 @@
             </div>
         </div>
         <div id="map"></div>
+        <div class="clearfix"></div>
     </section>
-    <div class="clearfix"></div>
-</main>
+</main class="contact-main">
 <footer>
     <div class="container">
         <div class="row">
