--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                                 <h1>Madison Real Estate Inc.</h1>
                                 <h3 class="col-sm-10 push-sm-1 col-md-12 push-md-0">A full service real estate firm located in the heart of Beverly Hills.</h3>
                                 <div class="button-wrapper">
-                                    <button onclick="window.location.href='contact.html'" class="button button-reverse button-arrow">
-                                        <span>Work with us<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 36.1 25.8" enable-background="new 0 0 36.1 25.8" xml:space="preserve"><g><line fill="none" stroke="#FFFFFF" stroke-width="3" stroke-miterlimit="10" x1="0" y1="12.9" x2="34" y2="12.9"></line><polyline fill="none" stroke="#FFFFFF" stroke-width="3" stroke-miterlimit="10" points="22.2,1.1 34,12.9 22.2,24.7   "></polyline></g></svg></span>
+                                    <button onclick="window.location.href='about.html'" class="button button-reverse button-arrow">
+                                        <span>Learn More<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 36.1 25.8" enable-background="new 0 0 36.1 25.8" xml:space="preserve"><g><line fill="none" stroke="#FFFFFF" stroke-width="3" stroke-miterlimit="10" x1="0" y1="12.9" x2="34" y2="12.9"></line><polyline fill="none" stroke="#FFFFFF" stroke-width="3" stroke-miterlimit="10" points="22.2,1.1 34,12.9 22.2,24.7   "></polyline></g></svg></span>
                                     </button>
                                 </div>
                             </div>
